# ml-app

./: Makefile  pyproject.toml  setup.cfg
.github/actions/: action.yml
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
experiments/: random_forest_model.ipynb
src/: app.py
src/config/: .env  __init__.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_service.py
src/model/pipeline/: data_collection.py  data_preparation.py  model_training.py
